Limit section title width to avoid horizontal scroll on small width

--- a/style/index.css
+++ b/style/index.css
@@ -94,6 +94,7 @@ main {
 
 h2.section-title {
     content: var(--styled-asset-path);
+    max-width: 100%;
 
     margin: 0;
     font-family: var(--font-display);
